<resources>
    <string name="app_name">Blitz: The Warrior Rise</string>
    <string name="start">Start Game</string>
    <string name="back">Back</string>
    <string name="about_author">About Author</string>
    <string name="about_game">About Game</string>
    <string name="button_label_enabled">Material Button</string>
    <string name="string1">String 1</string>
    <string name="string2">String 2</string>
    <string name="string3">String 3</string>
    <string name="Next_level">Next level</string>
    <string name="Next">Next</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-8156759534479281/9055619360</string>
</resources>
