<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background" />

    <TextView
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="70dp" />

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <Button
                android:id="@+id/buttonStart"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black95"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="36dp" />

            <Button
                android:id="@+id/button_about_game"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black95"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/about_game"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <Button
                android:id="@+id/button_about_author"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black95"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/about_author"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>