<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:padding="8dp">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
                <Button
                    android:id="@+id/button_Yes"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/black95"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/Yes"
                    android:textColor="@color/white"
                    android:textSize="36dp" />
                <Button
                    android:id="@+id/button_No"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/black95"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/No"
                    android:textColor="@color/white"
                    android:textSize="36dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_Yes_2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/black95"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/Yes"
                    android:textColor="@color/white"
                    android:textSize="36dp" />
                <Button
                    android:id="@+id/button_No_2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/black95"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/No"
                    android:textColor="@color/white"
                    android:textSize="36dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <ImageView
                android:id="@+id/level_two_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/sunset" />
            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <ImageView
                android:id="@+id/level_three_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/sunset" />
            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/button_next_level"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/black95"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Next_level"
                android:textColor="@color/white"
                android:textSize="36dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>